# dados-publicos

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
dados_publicos/: censo_superior.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: tp_grau_academico.sql  tp_modalidade_ensino.sql  tp_rede.sql
dbt/models/processed/: processed_sum_mat.sql
infrastructure/: docker-compose.yaml  main.tf  variables.tf
public_data/censo_superior/: extract.py
