[tool.poetry]
name = "dados-publicos"
version = "0.1.0"
description = ""
authors = ["Andre Luiz Braga Mallmann <andrebmallmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dagster = "^1.6.6"
dagster-webserver = "^1.6.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
